--- a/views/Comments/edit-comment.hbs
+++ b/views/Comments/edit-comment.hbs
@@ -1,4 +1,4 @@
-<h2> Edit the comment on: {{book.title}} </h2>
+<h2> Edit a comment on: {{book.title}} </h2>
 
 <form method="POST" action="/comment/{{book._id}}/edit">
 <label> Comment:
