--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -64,7 +64,7 @@
    </body>
 
    <footer>
-  <p>Application developed by Aishlan and Rafael - Ironhack Student Project 2023</p>
+  <p>Application developed by Aslihan and Rafael - Ironhack Student Project 2023</p>
 </footer>
 
 </html>
