--- a/views/Books/new.books.hbs
+++ b/views/Books/new.books.hbs
@@ -1,11 +1,20 @@
 <h2>Add a new Book.</h2>
 
 <form action="/books/create" method="post">
-<label> Name:
+<label> Title:
     <input type="text" name="title" />
 </label>
+
 <label> Author:
     <input type="text" name="Author" />
+</label>
+
+<label> Description:
+    <textarea name="description" cols="30" rows="4"></textarea>
+</label>
+
+<label> Rate:
+    <input type="number" name="rating" min="1" max="5" />
 </label>
 
 <button type="submit"> Add a Book</button>
