--- a/views/Comments/new-comment.hbs
+++ b/views/Comments/new-comment.hbs
@@ -1,13 +1,15 @@
 <h2>Add new comment to {{book.title}}</h2>
 <br>
 
-<form action="/Comments/create" method="POST">
-<label for="title">Comment</label>
+<form action="/comment/create" method="POST">
+<label>Comment:
 <input type="text" id="comment" name="comment">
-
+</label>
 <label> Plot:
     <textarea name="notes" cols="30" rows="5"></textarea>
 </label>
 
 <button type="submit">Create Comment</button>
 </form>
+
+<a href="/">Back</a>
